app is working with username, pass,token
